--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aryan Karmur</title>
-    <link rel="icon" href="assets/image/LD.jpg" />
+    <link rel="icon" href="assets/image/aryan.jpeg" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -33,19 +33,23 @@
     </header>
     <!-- header section ends -->
     <main>
-      <div id="menu" class="fas fa-bars"></div>
-
       <!-- home section start -->
       <section class="home" id="home">
-        <!-- <img src="assets/image/DHAVAL_LAL.png" alt=""> -->
+        <div class="image">
+          <img src="assets/image/aryan.jpeg" alt="Aryan Karmur" />
+        </div>
         <h3>HI THERE !</h3>
         <h1>I'M <span>Aryan Karmur</span></h1>
         <h3>And I'M a <span class="multiple-text"></span></h3>
         <p>
+          I am a dedicated and enthusiastic Frontend Developer with a
+          Bachelor's degree in Computer Applications. I have a strong
+          foundation in HTML, CSS, JavaScript, and React.js, and I am
+          passionate about creating responsive, user-friendly web interfaces.
+        </p>
+        <p>
           I have completed BCA in 2025 and i would like to work on live project.
-          I would like to work as a Frontend developer. I know about git &
-          github, HTML, CSS, TailwindCSS, JavaScript, JQuery and Bootstrap. also
-          i have knowledge about REACT JS.
+          I also have knowledge about git & github, TailwindCSS, JQuery and Bootstrap.
         </p>
         <a href="#about"
           ><button class="btn">about me <i class="fas fa-user"></i></button
@@ -63,24 +67,23 @@
             <h3><span> qualification : </span> BCA</h3>
             <h3><span> post : </span> Frontend Developer</h3>
             <h3><span> language : </span> english, hindi, gujarati</h3>
-            <a href="assets/resume/Lal_Dhaval_CV.pdf" download
+            <a href="assets/resume/Aryan karmur resume.pdf" download
               ><button class="btn">
                 download CV <i class="fas fa-download"></i></button
             ></a>
           </div>
           <div class="counter">
-
-                <!-- <div class="box">
+            <!-- <div class="box">
                     <span>2+</span>
                     <h3>years of experience</h3>
                 </div> -->
 
-                <!-- <div class="box">
+            <!-- <div class="box">
                     <span>2</span>
                     <h3>project completed</h3>
                 </div> -->
 
-                <!-- <div class="box">
+            <!-- <div class="box">
                     <span>200+</span>
                     <h3>happy Students</h3>
                 </div>
@@ -89,16 +92,21 @@
                     <span>1</span>
                     <h3>award won</h3>
                 </div> -->
-
-            </div>
+          </div>
         </div>
         <div>
           <p>
-            i have <span>2+</span> years of experience as a trainer in web
-            development as well as all languages of BCA and MCA. i have
-            completed <span>2+</span> Live Projects in speed computers. i have
-            <span>200+</span> Happy students train under me in web development.
-            i have also get <span>1</span> Award in mca 2015.
+            As a fresher, I have built real-world projects such as
+            <span> Mini Mart</span>, an <span>e-commerce website </span> using a
+            DummyJson API, and <span> Shree Shakti Cab</span>, a functional
+            <span> cab booking platform</span>. I enjoy learning new
+            technologies and continuously improving my skills to deliver clean,
+            efficient, and modern code.
+          </p>
+          <p>
+            I am actively seeking opportunities to contribute to innovative web
+            applications and grow as a developer in a dynamic and collaborative
+            environment.
           </p>
         </div>
       </section>
@@ -133,7 +141,7 @@
             <h3>Completed F.Y. BCA</h3>
             <p>
               I have completed my F. Y. BCA in H. L. Patel Collage, Bhayavadar
-              with 75% (Saurashtra University).
+              with 69.67% (Saurashtra University).
             </p>
           </div>
 
@@ -143,7 +151,7 @@
             <h3>Completed BCA</h3>
             <p>
               I have completed my BCA in H. L. Patel Collage, Bhayavadar with
-              80% (Saurashtra University).
+              71.33% (Saurashtra University).
             </p>
           </div>
         </div>
