some develop ment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aryan Karmur</title>
+    <meta
+      name="description"
+      content="Aryan Karmur - Frontend Developer skilled in React, HTML, CSS, JavaScript. Explore projects like Mini Mart, Cab Booking, and more."
+    />
+
+    <meta
+      name="keywords"
+      content="Aryan Karmur, Frontend Developer, React Developer, Web Developer, HTML, CSS, JavaScript, Portfolio, BCA Graduate, Mini Mart, Shree Shakti Cab"
+    />
+
+    <meta name="author" content="Aryan Karmur" />
+
+    <title>Aryan Karmur | Frontend Developer Portfolio</title>
     <link rel="icon" href="assets/image/aryan.jpeg" />
     <link rel="stylesheet" href="style.css" />
     <link
@@ -26,7 +38,7 @@
           <li><a href="#home">home</a></li>
           <li><a href="#about">about</a></li>
           <li><a href="#education">education</a></li>
-          <li><a href="#portfolio">portfolio</a></li>
+          <li><a href="#portfolio">projects</a></li>
           <li><a href="#contact">contact</a></li>
         </ul>
       </nav>
@@ -36,20 +48,21 @@
       <!-- home section start -->
       <section class="home" id="home">
         <div class="image">
-          <img src="assets/image/aryan.jpeg" alt="Aryan Karmur" />
+          <img src="assets/image/aryan.jpeg" alt="Aryan Karmur image" />
         </div>
         <h3>HI THERE !</h3>
         <h1>I'M <span>Aryan Karmur</span></h1>
         <h3>And I'M a <span class="multiple-text"></span></h3>
         <p>
-          I am a dedicated and enthusiastic Frontend Developer with a
-          Bachelor's degree in Computer Applications. I have a strong
-          foundation in HTML, CSS, JavaScript, and React.js, and I am
-          passionate about creating responsive, user-friendly web interfaces.
+          I am a dedicated and enthusiastic Frontend Developer with a Bachelor's
+          degree in Computer Applications. I have a strong foundation in HTML,
+          CSS, JavaScript, and React.js, and I am passionate about creating
+          responsive, user-friendly web interfaces.
         </p>
         <p>
           I have completed BCA in 2025 and i would like to work on live project.
-          I also have knowledge about git & github, TailwindCSS, JQuery and Bootstrap.
+          I also have knowledge about git & github, TailwindCSS, JQuery and
+          Bootstrap.
         </p>
         <a href="#about"
           ><button class="btn">about me <i class="fas fa-user"></i></button
@@ -69,7 +82,7 @@
             <h3><span> language : </span> english, hindi, gujarati</h3>
             <a href="assets/resume/Aryan karmur resume.pdf" download
               ><button class="btn">
-                download CV <i class="fas fa-download"></i></button
+                download My CV <i class="fas fa-download"></i></button
             ></a>
           </div>
           <div class="counter">
@@ -160,20 +173,72 @@
 
       <!-- portfolio section start -->
       <section class="portfolio" id="portfolio">
-        <h1 class="heading">my <span>portfolio</span></h1>
+        <h1 class="heading">my <span>projects</span></h1>
         <div class="box-container">
           <div class="box">
-            <a href="https://shreeshakticab.netlify.app/" target="_blank"
-              ><img
+            <div class="project-img">
+              <img
                 src="assets/image/shreeshakticab.png"
                 alt="shree shakti cab image"
-            /></a>
+              />
+            </div>
+            <div class="project-details m-r">
+              <h3><span> Shree Shakti Cab</span></h3>
+              <p>
+                <span> Description:</span> A fully responsive car rental website
+                where users can book cabs by selecting dates, times, and vehicle
+                types. Built using HTML, CSS, JavaScript, and jQuery with
+                date/time picker integration. My role included creating the user
+                interface and implementing basic form validation and
+                interaction.
+              </p>
+              <p>
+                <span>Technologies Used:</span> HTML, CSS, JavaScript, jQuery
+              </p>
+              <div class="buttons">
+                <a href="https://shreeshakticab.netlify.app/" target="_blank"
+                  ><button>
+                    View Live Project
+                    <i class="fas fa-external-link"></i></button
+                ></a>
+                <a
+                  href="https://github.com/Aryankarmur/carrentel_website"
+                  target="_blank"
+                  ><button>View Code <i class="fas fa-code"></i></button
+                ></a>
+              </div>
+            </div>
           </div>
 
-          <div class="box">
-            <a href="https://mini-mart-bajar.netlify.app/" target="_blank"
-              ><img src="assets/image/minimart.png" alt="Mini mart image"
-            /></a>
+          <div class="box right">
+            <div class="project-img">
+              <img src="assets/image/minimart.png" alt="Mini mart image" />
+            </div>
+            <div class="project-details">
+              <h3><span> Mini Mart</span></h3>
+              <p>
+                <span>Description:</span> A modern e-commerce site built using
+                React.js and DummyJSON API. Users can browse products, add items
+                to cart, and view product details. Focused on responsive UI,
+                React state management, and routing with React Router.
+              </p>
+              <p>
+                <span>Technologies Used:</span> React.Js, HTML, CSS, JavaScript,
+                DummyJson API
+              </p>
+              <div class="buttons">
+                <a href="https://mini-mart-bajar.netlify.app/" target="_blank"
+                  ><button>
+                    View Live Project
+                    <i class="fas fa-external-link"></i></button
+                ></a>
+                <a
+                  href="https://github.com/Aryankarmur/mini_mart"
+                  target="_blank"
+                  ><button>View Code <i class="fas fa-code"></i></button
+                ></a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -191,6 +256,16 @@
               <h3>
                 <i class="fas fa-map-marker-alt"></i> Butavadar, Jamnagar,
                 Gujarat
+              </h3>
+              <h3>
+                <a
+                  href="https://www.linkedin.com/in/aryankaramur/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-linkedin"></i>
+                  Aryan Karmur
+                </a>
               </h3>
             </div>
           </div>
