--- a/index.html
+++ b/index.html
@@ -14,15 +14,34 @@
     />
 
     <meta name="author" content="Aryan Karmur" />
+    <!-- open graph -->
+    <meta
+      property="og:title"
+      content="Aryan Karmur | Frontend Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Explore my frontend projects in React, HTML, CSS, JavaScript. Projects include Mini Mart, Shree Shakti Cab, and more."
+    />
+    <meta
+      property="og:image"
+      content="https://aryankarmur-portfolio.netlify.app/assets/image/aryan.jpeg"
+    />
+    <meta
+      property="og:url"
+      content="https://aryankarmur-portfolio.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Aryan Karmur Portfolio" />
+<!-- end open graph -->
 
-    <title>Aryan Karmur | Frontend Developer Portfolio</title>
-    <link rel="icon" href="assets/image/aryan.jpeg" />
+    <link rel="icon" href="assets/image/aryan.ico" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="assets/fontawesome-free-6.5.1-web/css/all.min.css"
     />
-    <script src="assets/js/type.js"></script>
+    <title>Aryan Karmur | Frontend Developer Portfolio</title>
   </head>
   <body>
     <!-- header section start -->
@@ -352,5 +371,6 @@
     </a>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/type.js"></script>
   </body>
 </html>
